
[project]
name = "MercadoBitcoinBalance"
version = '1.4'
description = "Calcula, salva e reporta seu saldo do Mercado Bitcoin"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Avi Alkalay", email = "avi@unix.sh" },
]

keywords = [
    "etl",
    "crypto",
    "mercadobitcoin"
]

dependencies = [
    "pandas",
]

classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]


[project.scripts]
balancemb = "MercadoBitcoinBalance.__main__:main"

[project.urls]
Homepage = "https://github.com/avibrazil/MercadoBitcoinBalance"
Source = "https://github.com/avibrazil/MercadoBitcoinBalance"
Issues = "https://github.com/avibrazil/MercadoBitcoinBalance/issues/new/choose"
Pypi = "https://pypi.org/project/MercadoBitcoinBalance"


[tool.setuptools.package-dir]
MercadoBitcoinBalance = "src"
